refactor insert user to hash password -add patch user/tests - swagger for patch user
